--- a/html/createAccount.html
+++ b/html/createAccount.html
@@ -17,7 +17,7 @@
         >
             <div class="row">
                 <div
-                    class="col-12 col-md-6 d-flex justify-content-center align-items-center"
+                    class="col-12 col-md-6 d-flex justify-content-center align-items-center slide-down"
                 >
                     <div class="container">
                         <div class="row">
@@ -41,7 +41,7 @@
                     </div>
                 </div>
                 <div
-                    class="col-12 col-md-6 d-flex justify-content-center align-items-center"
+                    class="col-12 col-md-6 d-flex justify-content-center align-items-center slide-up"
                 >
                     <form id="createAccount" class="w-100">
                         <h2 class="fw-bolder text-center mb-3">Criar conta!</h2>
