--- a/html/note.html
+++ b/html/note.html
@@ -151,6 +151,28 @@
                         </div>
                     </div>
                 </div>
+                <div id="sendUserCreateAccount" class="modal" tabindex="-1">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h4 class="modal-title">Criação de conta!</h4>
+                            </div>
+                            <div class="modal-body text-center">
+                                <p class="fw-bolder">
+                                    Redirecionando para criação de conta!
+                                </p>
+                                <div
+                                    class="spinner-border text-primary"
+                                    role="status"
+                                >
+                                    <span class="visually-hidden"
+                                        >Loading...</span
+                                    >
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
                 <div id="successRemoveNote" class="modal" tabindex="-1">
                     <div class="modal-dialog">
                         <div class="modal-content">
@@ -174,6 +196,23 @@
                             <div class="modal-body text-center">
                                 <p class="fw-bolder">
                                     Recado editado com sucesso!
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div id="welcome" class="modal" tabindex="-1">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h4 class="modal-title">
+                                    Bem-vindo ao NoteSoftware!
+                                </h4>
+                            </div>
+                            <div class="modal-body text-center">
+                                <p class="fw-bolder">
+                                    Com esse aplicativo, você poderá salvar suas
+                                    anotações, excluir e também editar!
                                 </p>
                             </div>
                         </div>
