--- a/html/login.html
+++ b/html/login.html
@@ -17,7 +17,7 @@
         >
             <div class="row">
                 <div
-                    class="col-12 col-md-6 d-flex justify-content-center align-items-center"
+                    class="col-12 col-md-6 d-flex justify-content-center align-items-center slide-down"
                 >
                     <div class="container">
                         <div class="row">
@@ -42,7 +42,7 @@
                 </div>
                 <!--  -->
                 <div
-                    class="col-12 col-md-6 d-flex justify-content-center align-items-center"
+                    class="col-12 col-md-6 d-flex justify-content-center align-items-center slide-up"
                 >
                     <form id="loginForm" class="w-100">
                         <h2 class="fw-bolder text-center mb-2">
