--- a/html/createAccount.html
+++ b/html/createAccount.html
@@ -9,6 +9,11 @@
             href="../node_modules/bootstrap/dist/css/bootstrap.min.css"
         />
         <link rel="stylesheet" href="../css/login-createAccount.css" />
+        <link
+            rel="shortcut icon"
+            href="../assets/favicon/dev.ico"
+            type="image/x-icon"
+        />
         <title>NoteSoftware - v2.0</title>
     </head>
     <body class="vh-100 d-flex align-items-center">
@@ -16,7 +21,7 @@
             class="container h-75 w-75 d-flex justify-content-center bg-white bg-opacity-75 border border-3 rounded-4 shadow-lg"
         >
             <div class="row">
-                <div
+                <section
                     class="col-12 col-md-6 d-flex justify-content-center align-items-center slide-down"
                 >
                     <div class="container">
@@ -39,8 +44,8 @@
                             </div>
                         </div>
                     </div>
-                </div>
-                <div
+                </section>
+                <section
                     class="col-12 col-md-6 d-flex justify-content-center align-items-center slide-up"
                 >
                     <form id="createAccount" class="w-100">
@@ -102,6 +107,7 @@
                                 >página inicial!</a
                             >
                         </p>
+                        <!-- modais -->
                         <div id="loadingModal" class="modal" tabindex="-1">
                             <div class="modal-dialog">
                                 <div class="modal-content">
@@ -201,7 +207,7 @@
                             </div>
                         </div>
                     </form>
-                </div>
+                </section>
             </div>
         </main>
         <script src="../node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
