--- a/html/note.html
+++ b/html/note.html
@@ -9,61 +9,66 @@
             href="../node_modules/bootstrap/dist/css/bootstrap.min.css"
         />
         <link rel="stylesheet" href="../css/login-createAccount.css" />
+        <link
+            rel="shortcut icon"
+            href="../assets/favicon/dev.ico"
+            type="image/x-icon"
+        />
         <title>NoteSoftware - v2.0</title>
     </head>
     <body>
-        <main>
-            <header
-                class="container-fluid mt-2 d-flex justify-content-center align-items-center bg-white bg-opacity-75 border border-3 rounded-4 shadow-lg"
-            >
-                <div class="row w-100 text-center">
-                    <div class="col-12 m-3">
-                        <h1>Meus recados!</h1>
-                    </div>
+        <header
+            class="container-fluid mt-2 d-flex justify-content-center align-items-center bg-white bg-opacity-75 border border-3 rounded-4 shadow-lg"
+        >
+            <div class="row w-100 text-center">
+                <div class="col-12 m-3">
+                    <h1>Meus recados!</h1>
                 </div>
-                <div class="col">
-                    <svg
-                        id="btnLog"
-                        xmlns="http://www.w3.org/2000/svg"
-                        width="25"
-                        height="25"
-                        fill="currentColor"
-                        class="bi bi-box-arrow-right pointer me-4"
-                        viewBox="0 0 16 16"
-                    >
-                        <path
-                            fill-rule="evenodd"
-                            d="M10 12.5a.5.5 0 0 1-.5.5h-8a.5.5 0 0 1-.5-.5v-9a.5.5 0 0 1 .5-.5h8a.5.5 0 0 1 .5.5v2a.5.5 0 0 0 1 0v-2A1.5 1.5 0 0 0 9.5 2h-8A1.5 1.5 0 0 0 0 3.5v9A1.5 1.5 0 0 0 1.5 14h8a1.5 1.5 0 0 0 1.5-1.5v-2a.5.5 0 0 0-1 0v2z"
-                        />
-                        <path
-                            fill-rule="evenodd"
-                            d="M15.854 8.354a.5.5 0 0 0 0-.708l-3-3a.5.5 0 0 0-.708.708L14.293 7.5H5.5a.5.5 0 0 0 0 1h8.793l-2.147 2.146a.5.5 0 0 0 .708.708l3-3z"
-                        />
-                    </svg>
-                    <div id="logoutModal" class="modal" tabindex="-1">
-                        <div class="modal-dialog">
-                            <div class="modal-content">
-                                <div class="modal-header">
-                                    <h4 class="modal-title">Saindo!</h4>
-                                </div>
-                                <div class="modal-body text-center">
-                                    <p class="fw-bolder">
-                                        Redirecionando para a tela de login!
-                                    </p>
-                                    <div
-                                        class="spinner-border text-primary"
-                                        role="status"
+            </div>
+            <div class="col">
+                <svg
+                    id="btnLog"
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="25"
+                    height="25"
+                    fill="currentColor"
+                    class="bi bi-box-arrow-right pointer me-4"
+                    viewBox="0 0 16 16"
+                >
+                    <path
+                        fill-rule="evenodd"
+                        d="M10 12.5a.5.5 0 0 1-.5.5h-8a.5.5 0 0 1-.5-.5v-9a.5.5 0 0 1 .5-.5h8a.5.5 0 0 1 .5.5v2a.5.5 0 0 0 1 0v-2A1.5 1.5 0 0 0 9.5 2h-8A1.5 1.5 0 0 0 0 3.5v9A1.5 1.5 0 0 0 1.5 14h8a1.5 1.5 0 0 0 1.5-1.5v-2a.5.5 0 0 0-1 0v2z"
+                    />
+                    <path
+                        fill-rule="evenodd"
+                        d="M15.854 8.354a.5.5 0 0 0 0-.708l-3-3a.5.5 0 0 0-.708.708L14.293 7.5H5.5a.5.5 0 0 0 0 1h8.793l-2.147 2.146a.5.5 0 0 0 .708.708l3-3z"
+                    />
+                </svg>
+                <div id="logoutModal" class="modal" tabindex="-1">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h4 class="modal-title">Saindo!</h4>
+                            </div>
+                            <div class="modal-body text-center">
+                                <p class="fw-bolder">
+                                    Redirecionando para a tela de login!
+                                </p>
+                                <div
+                                    class="spinner-border text-primary"
+                                    role="status"
+                                >
+                                    <span class="visually-hidden"
+                                        >Loading...</span
                                     >
-                                        <span class="visually-hidden"
-                                            >Loading...</span
-                                        >
-                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-            </header>
+            </div>
+        </header>
+        <main>
             <section
                 class="container mt-2 w-100 d-flex justify-content-center bg-white bg-opacity-75 border border-3 rounded-4 shadow-lg"
             >
@@ -108,6 +113,7 @@
                     </div>
                 </form>
             </section>
+            <!-- ========== modais ========== -->
             <section
                 class="container-fluid mt-2 w-100 d-flex justify-content-center bg-white bg-opacity-75 border border-3 rounded-4 shadow-lg"
             >
