--- a/login.html
+++ b/login.html
@@ -6,12 +6,12 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link
             rel="stylesheet"
-            href="../node_modules/bootstrap/dist/css/bootstrap.min.css"
+            href="node_modules/bootstrap/dist/css/bootstrap.min.css"
         />
-        <link rel="stylesheet" href="../css/login-createAccount.css" />
+        <link rel="stylesheet" href="css/login-createAccount.css" />
         <link
             rel="shortcut icon"
-            href="../assets/favicon/dev.ico"
+            href="assets/favicon/dev.ico"
             type="image/x-icon"
         />
         <title>NoteSoftware - v2.0</title>
@@ -175,7 +175,7 @@
                 </section>
             </div>
         </main>
-        <script src="../node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-        <script src="../js/login.js"></script>
+        <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+        <script src="js/login.js"></script>
     </body>
 </html>
